testdata/baselines/reference/submodule/conformance/jsdocParseStarEquals.errors.txt
a.js(12,14): error TS7006: Parameter 'f' implicitly has an 'any' type.


==== a.js (1 errors) ====
    /** @param {...*=} args
        @return {*=} */
    function f(...args) {
        return null
    }
    
    /** @type *= */
    var x;
    
    
    /** @param {function():*=} f */
    function cbf(f) {
                 ~
!!! error TS7006: Parameter 'f' implicitly has an 'any' type.
    }
    